--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "manual_control.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "node-hid": "^0.6.0"
   },
   "devDependencies": {},
